syntax = "proto2";

package com.pimzero.jinterpose;

option java_package = "com.pimzero.jinterpose";
option java_outer_classname = "Proto";

message Matcher {
	optional string classname = 1;
	optional string methodname = 2;
}

message Matcher_expr {
	message Matcher_or {
		repeated Matcher_expr expr = 1;
	}

	message Matcher_and {
		repeated Matcher_expr expr = 1;
	}

	oneof expr {
		Matcher match = 1;
		Matcher_or or = 2;
		Matcher_and and = 3;
		Matcher_expr not = 4;
	}
}

message Action {
	message Do {
		/*
		 * Replace references to a field to another field
		 * src_name: name of the Field to replace
		 * src_owner: class name of the Field to replace
		 * dst_name: name of the new Field to use
		 * dst_owner: class name of the new Field to use
		 */
		message DoFieldInterposition {
			optional string src_name = 1;
			optional string src_owner = 2;
			optional string dst_name = 3;
			optional string dst_owner = 4;
		}

		/*
		 * Unsupported: Log method on entry
		 */
		message DoLogMethod {
		}

		oneof action {
			DoFieldInterposition field_interposition = 1;
			DoLogMethod log_method = 2;
		}
	}
	optional Matcher_expr when = 1;
	repeated Do do = 2;
};

message Configuration {
	repeated Action action = 1;
}
